tests/ui/associated-consts/associated-const-type-parameter-arrays.stderr
error: generic parameters may not be used in const operations
  --> $DIR/associated-const-type-parameter-arrays.rs:16:24
   |
LL |     let _array: [u32; <A as Foo>::Y];
   |                        ^ cannot perform const operation using `A`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to previous error

